clusters/test-deployment/apps/policy-reporter-test/namespace-policy-reporter-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-reporter-test
  labels:
    app.kubernetes.io/part-of: test-deployment
